--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <!-- /////slogan -->
 		</div>
-		<div style="position:absolute; left: 110px; top:110px;">
-  <img src="slogan.svg" alt="image">
+		<div style="position:absolute; left: 80px; top:80px;">
+  <img src="powering.svg" alt="image">
 </div>
 <!-- /////about -->
 
@@ -44,6 +44,8 @@
 		<script type="module">
 
 			import * as THREE from '../build/three.module.js';
+			import { LineMaterial } from './jsm/lines/LineMaterial.js';
+			import { LineGeometry } from './jsm/lines/LineGeometry.js';
 
 			import Stats from './jsm/libs/stats.module.js';
 
@@ -61,14 +63,14 @@
 
 			var text = "Q&A",
 
-				height = 20,
+				height = 40,
 				size = 100,
 				hover = 30,
 
-				curveSegments = 4,
+				curveSegments = 80,
 
-				bevelThickness = 1,
-				bevelSize = 1.5,
+				bevelThickness = 0.5,
+				bevelSize = 0.5,
 				bevelEnabled = true,
 
 				font = undefined,
@@ -94,7 +96,7 @@
 			function decimalToHex( d ) {
 
 				var hex = Number( d ).toString( 16 );
-				hex = "000000".substr( 0, 6 - hex.length ) + hex;
+				hex = "272827".substr( 0, 6 - hex.length ) + hex;
 				return hex.toUpperCase();
 
 			}
@@ -116,24 +118,19 @@
 				// SCENE
 
 				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0x000000 );
-				scene.fog = new THREE.Fog( 0x000000, 250, 1400 );
+				scene.background = new THREE.Color( 0xDFDFDA );
+				// scene.fog = new THREE.Fog( 0xDFDFDA, 250, 1400 );
 
 				// LIGHTS
 
-				var dirLight = new THREE.DirectionalLight( 0xffffff, 0.125 );
-				dirLight.position.set( 0, 0, 1 ).normalize();
-				scene.add( dirLight );
-
-				var pointLight = new THREE.PointLight( 0xffffff, 1.5 );
-				pointLight.position.set( 0, 100, 90 );
-				scene.add( pointLight );
 
 
-				materials = [
-					new THREE.MeshPhongMaterial( { color: 0xffffff, wireframe: true } ), // front
-					new THREE.MeshPhongMaterial( { color: 0xffffff, wireframe: true } ) // side
-				];
+				// materials = [
+				// 	new THREE.MeshBasicMaterial( { color: 0xDFDFDA } ), // front
+				// 	// new THREE.MeshBasicMaterial( { color: 0xDFDFDA, color: 0xDFDFDA, 1: true } ) // front
+				//
+				// 	new THREE.MeshBasicMaterial( { color: 0xDFDFDA } ) // side
+				// ];
 
 				group = new THREE.Group();
 				group.position.y = 100;
@@ -265,18 +262,20 @@
 				var centerOffset = - 0.5 * ( textGeo.boundingBox.max.x - textGeo.boundingBox.min.x );
 
 				textGeo = new THREE.BufferGeometry().fromGeometry( textGeo );
-
+				//
 				textMesh1 = new THREE.Mesh( textGeo, materials );
 
-				textMesh1.position.x = centerOffset;
-				textMesh1.position.y = hover;
-				textMesh1.position.z = 0;
+				var geo = new THREE.EdgesGeometry( textMesh1.geometry ); // or WireframeGeometry
+				var mat = new THREE.LineBasicMaterial( { color: 0x272827, linewidth: 10 } );
+				var wireframe = new THREE.LineSegments( geo, mat );
 
-				textMesh1.rotation.x = 0;
-				textMesh1.rotation.y = Math.PI * 2;
+				wireframe.position.x = centerOffset;
+					wireframe.position.y = hover;
+				wireframe.position.z = 0;
 
-				group.add( textMesh1 );
-
+				wireframe.rotation.x = 0;
+					wireframe.rotation.y = Math.PI * 2;
+				group.add( wireframe );
 
 			}
 
