--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 <img src="about.svg" alt="image">
 </div>
 
+<li class="pointer"></li>
+
 <!-- /////links -->
 <!-- hrs -->
 <div class="social-link" id="hrs">
