--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 </div>
 <!-- in -->
 <div class="social-link" id="in">
+		 <a href="https://www.linkedin.com/company/qandamedia/">
 <img id="icon"src="in.svg" alt="image">
 </div>
 <!-- angelist -->
