--- a/index.html
+++ b/index.html
@@ -174,15 +174,11 @@ vid2.load();
 				renderer.setPixelRatio( window.devicePixelRatio );
 
 								if (window.innerWidth<500){
-									renderer.setSize( window.innerWidth-500, window.innerHeight );
+									renderer.setSize( window.innerWidth-200, window.innerHeight-200 );
 
 								}
 								else{
-
-
 														renderer.setSize( window.innerWidth, window.innerHeight );
-
-
 								}
 				// renderer.setSize( window.innerWidth, window.innerHeight );
 
