--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <img src="about.svg" alt="image">
 </div>
 
+<div id="explain" >
+<img id="explain" src="explain.png" alt="image">
+</div>
+
 <!-- /////links -->
 <!-- hrs -->
 <div class="social-link" id="hrs">
@@ -186,7 +190,7 @@ vid2.load();
 				// renderer.setSize( window.innerWidth, window.innerHeight );
 
 				container.appendChild( renderer.domElement );
-
+// renderer.updateMatrix();
 				// STATS
 
 				stats = new Stats();
