--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <img id="slogan"src="powering.svg" alt="image">
 
 <!-- /////about -->
-<div id="about" onclick="if(aboutin ){vidIn() }else{vidOut()}">
+<div id="about" onclick="if(screen.width>1000&&aboutin){vidIn() }else{vidOut()}">
 <img src="about.svg" alt="image">
 </div>
 
@@ -59,18 +59,15 @@ var vid2 = document.getElementById("animate-out");
 var aboutin = true;
 
 function vidIn() {
-	screen.width < 1000{
 	vid2.style.zIndex = "-1";
 	vid1.style.zIndex = "1";
 	vid1.currentTime = 0;
   vid1.load();
   vid1.play();
 	aboutin = false;
-	}
 }
 
 function vidOut() {
-	screen.width < 1000{
 
 	vid1.pause();
 	vid2.style.zIndex = "1";
@@ -79,7 +76,7 @@ function vidOut() {
 vid2.load();
   vid2.play();
 	aboutin = true;
-}
+
 }
 
 
@@ -332,7 +329,7 @@ vid2.load();
 				group.add( wireframe);
 
 			}
-
+//
 
 			function refreshText() {
 
