--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <img id="slogan"src="powering.svg" alt="image">
 
 <!-- /////about -->
-<div id="about" onclick="if(screen.width>1000&&aboutin){vidIn() }else{vidOut()}">
+<div id="about" onclick="if(screen.width>1000){if(aboutin){vidIn() }else{vidOut()}}">
 <img src="about.svg" alt="image">
 </div>
 
