--- a/index.html
+++ b/index.html
@@ -28,10 +28,18 @@
 <img id="icon" src="hrs.svg" alt="image">
 </a>
 </div>
-<!-- ig -->
-<div class="social-link" id="ig">
-<img id="icon" src="ig.svg" alt="image">
+<!-- scale -->
+<div class="social-link" id="scale">
+
+<img  src="Scale_Logo_Black_RGB.svg" alt="image">
+
 </div>
+
+
+<!-- ig -->
+<!-- <div class="social-link" id="ig">
+<img id="icon" src="ig.svg" alt="image">
+</div> -->
 <!-- in -->
 <div class="social-link" id="in">
 	<a href="https://www.linkedin.com/company/qandamedia/">
@@ -40,7 +48,8 @@
 </div>
 <!-- angelist -->
 <div  class="social-link" id="peace">
-<img id="icon" src="peace.svg" alt="image">
+		<a href="https://angel.co/company/qandamedia">
+<img id="icon" src="peace.svg" alt="image"></a>
 </div>
 
 <video class = "about-animation" id="animate-in"  width="500" >
