--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!-- /////about -->
 <div id="about" onclick="if(screen.width>1000){if(aboutin){vidIn() }else{vidOut()}}else{vidHide()}">
-<img src="about.svg" alt="image">
+<img src="about1.svg" alt="image">
 </div>
 
 <div id="explain" >
