--- a/index.html
+++ b/index.html
@@ -29,17 +29,19 @@
 </a>
 </div>
 <!-- scale -->
-<div class="social-link" id="scale">
+<!-- <div class="social-link" id="scale">
 
 <img  src="Scale_Logo_Black_RGB.svg" alt="image">
 
-</div>
+</div> -->
 
 
 <!-- ig -->
-<!-- <div class="social-link" id="ig">
+<div class="social-link" id="ig">
+	<a href="https://www.instagram.com/qanda.la/">
 <img id="icon" src="ig.svg" alt="image">
-</div> -->
+</a>
+</div>
 <!-- in -->
 <div class="social-link" id="in">
 	<a href="https://www.linkedin.com/company/qandamedia/">
